--- a/区块链作业入门/笔记.md
+++ b/区块链作业入门/笔记.md
@@ -1,5 +1,5 @@
-1.![注意如何调试](调试利器.png)
+1.注意如何调试:![注意如何调试](调试利器.png)
 
 2.spacing.py中有很具体的注释，仔细研读
 
-3.![守护态运行docker容器时，需要明白如何调试](docker后台运行的坑.png)
+3.守护态运行docker容器时，需要明白如何调试,如图：![守护态运行docker容器时，需要明白如何调试](docker后台运行的坑.png)
